--- a/Laboratorio_1.ipynb
+++ b/Laboratorio_1.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Laboratorio 1.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyO4RpavJ/mZJPW2DjprNKYl",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +12,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/JazmineAlfaro/Topicos-en-Inteligencia-Artificial/blob/master/Laboratorio_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
