--- a/Petrol Consumption/Petrol Consumption.ipynb
+++ b/Petrol Consumption/Petrol Consumption.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,68 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    datos 1  datos 2  datos 3  datos 4  datos 5\n",
-      "0      9.00     3571     1976    0.525      541\n",
-      "1      9.00     4092     1250    0.572      524\n",
-      "2      9.00     3865     1586    0.580      561\n",
-      "3      7.50     4870     2351    0.529      414\n",
-      "4      8.00     4399      431    0.544      410\n",
-      "5     10.00     5342     1333    0.571      457\n",
-      "6      8.00     5319    11868    0.451      344\n",
-      "7      8.00     5126     2138    0.553      467\n",
-      "8      8.00     4447     8577    0.529      464\n",
-      "9      7.00     4512     8507    0.552      498\n",
-      "10     8.00     4391     5939    0.530      580\n",
-      "11     7.50     5126    14186    0.525      471\n",
-      "12     7.00     4817     6930    0.574      525\n",
-      "13     7.00     4207     6580    0.545      508\n",
-      "14     7.00     4332     8159    0.608      566\n",
-      "15     7.00     4318    10340    0.586      635\n",
-      "16     7.00     4206     8508    0.572      603\n",
-      "17     7.00     3718     4725    0.540      714\n",
-      "18     7.00     4716     5915    0.724      865\n",
-      "19     8.50     4341     6010    0.677      640\n",
-      "20     7.00     4593     7834    0.663      649\n",
-      "21     8.00     4983      602    0.602      540\n",
-      "22     9.00     4897     2449    0.511      464\n",
-      "23     9.00     4258     4686    0.517      547\n",
-      "24     8.50     4574     2619    0.551      460\n",
-      "25     9.00     3721     4746    0.544      566\n",
-      "26     8.00     3448     5399    0.548      577\n",
-      "27     7.50     3846     9061    0.579      631\n",
-      "28     8.00     4188     5975    0.563      574\n",
-      "29     9.00     3601     4650    0.493      534\n",
-      "30     7.00     3640     6905    0.518      571\n",
-      "31     7.00     3333     6594    0.513      554\n",
-      "32     8.00     3063     6524    0.578      577\n",
-      "33     7.50     3357     4121    0.547      628\n",
-      "34     8.00     3528     3495    0.487      487\n",
-      "35     6.58     3802     7834    0.629      644\n",
-      "36     5.00     4045    17782    0.566      640\n",
-      "37     7.00     3897     6385    0.586      704\n",
-      "38     8.50     3635     3274    0.663      648\n",
-      "39     7.00     4345     3905    0.672      968\n",
-      "40     7.00     4449     4639    0.626      587\n",
-      "41     7.00     3656     3985    0.563      699\n",
-      "42     7.00     4300     3635    0.603      632\n",
-      "43     7.00     3745     2611    0.508      591\n",
-      "44     6.00     5215     2302    0.672      782\n",
-      "45     9.00     4476     3942    0.571      510\n",
-      "46     7.00     4296     4083    0.623      610\n",
-      "47     7.00     5002     9794    0.593      524\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-e7c1c6317b59>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Libro2.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m';'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
    "source": [
     "data = pd.read_csv('Libro2.csv', sep=';')\n",
-    "print(data)\n"
+    "print(data)"
    ]
   },
   {
@@ -159,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +271,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normal_equation(X, y):\n",
+    "    theta = np.dot(np.dot(np.linalg.inv(np.dot(X.T,X)),X.T),y)\n",
+    "    h_array = np.dot(X, theta)\n",
+    "    j = (1/(2*X.shape[0]))* np.sum((h_array-y)**2)\n",
+    "    return theta,j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -323,15 +292,22 @@
      "output_type": "stream",
      "text": [
       "[ 0.01424402 -0.28653858 -0.33433636 -0.13068401  0.68658193]\n",
-      "0.15105625262887\n"
+      "[ 0.0142602  -0.28642347 -0.33434577 -0.13061012  0.68666625]\n",
+      "0.15105625262887\n",
+      "0.16884401805473417\n"
      ]
     }
    ],
    "source": [
     "theta_r, cost_history_r = gradient_descent(X_train, y_train, theta)\n",
     "print(theta_r)\n",
+    "\n",
+    "new_theta, j1 = normal_equation(X_train, y_train)\n",
+    "print(new_theta)\n",
+    "\n",
     "cost = cal_cost(theta_r,X_test, y_test)\n",
-    "print(cost)"
+    "print(cost)\n",
+    "print(j1)"
    ]
   },
   {
