--- a/Petrol Consumption/Petrol Consumption.ipynb
+++ b/Petrol Consumption/Petrol Consumption.ipynb
@@ -577,6 +577,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12858877512036418\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cal_cost(theta_r, X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
