--- a/Temperatura/Temperatura.ipynb
+++ b/Temperatura/Temperatura.ipynb
@@ -443,6 +443,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19202891646984394\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cal_cost(theta_r, X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
