--- a/MLP-SVM/MLP-SVM.ipynb
+++ b/MLP-SVM/MLP-SVM.ipynb
@@ -337,9 +337,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score de linear SVM:\n",
+      " 0.9610244988864143\n",
+      "Score de polynomial SVM:\n",
+      " 0.9749443207126949\n",
+      "Score de sigmoid SVM:\n",
+      " 0.717706013363029\n",
+      "Score de kernel gausiano SVM:\n",
+      " 0.982739420935412\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -419,6 +434,13 @@
     "score = kernel_gausiano_SVM(X_train, y_train, X_test, y_test)\n",
     "print (\"Score de kernel gausiano SVM:\\n\", score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
