--- a/MLP-SVM/.ipynb
+++ b/MLP-SVM/.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,6 +245,7 @@
     "    print(\"Y SHAPE\")\n",
     "    print(y.shape)\n",
     "    #return np.sum(result) / y.shape[1]\n",
+    "    print(\"end\")\n",
     "    return np.sum(result)"
    ]
   },
@@ -352,18 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Activation(X, W, b):\n",
-    "    print(type(X))\n",
-    "    print(type(W))\n",
-    "    print(X.shape)\n",
-    "    print(W.shape)\n",
+    "    print(\"X SHAPE: \", X.shape)\n",
+    "    print(\"W SHAPE: \", W.shape)\n",
+    "    print(\"b SHAPE: \", b.shape)\n",
+    "    print(b)\n",
+    "    Z = np.dot(X,W) +b\n",
     "    \n",
-    "    Z = np.dot(X,W)  + b\n",
-    "    #Z = np.mat(X) * np.mat(W)+ b\n",
     "    A = Sigmoidal(Z)\n",
     "    return A, Z"
    ]
@@ -437,10 +437,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_dC_dA_L(A_L, y):\n",
+    "    return -np.divide(y, A_L) + np.divide(1 - y, 1 - A_L)\n",
+    "\n",
     "def Backward(W, b, z, A, y, learn_rate):\n",
     "    m = A[\"A0\"].shape[1]\n",
     "    dA = get_dC_dA_L(A[\"A%d\"%(len(A)-1)], y)\n",
@@ -485,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +496,6 @@
     "    return np.random.rand(cur, prev)\n",
     "def generate_b(b):\n",
     "    return np.random.rand(b, 1)\n",
-    "\n",
     "\n",
     "def generator_W_b(layers):\n",
     "    W = {}\n",
@@ -503,7 +505,7 @@
     "        b[\"b%d\"%(l+1)] = generate_b(layers[l+1])\n",
     "    return W, b\n",
     "\n",
-    "def getNeurons(num_layers=1, neurons=[1]):\n",
+    "def neuronas(num_layers=1, neurons=[1]):\n",
     "    lays = []\n",
     "    for i in range(num_layers):\n",
     "        lays.append(random.choice(neurons))\n",
@@ -519,69 +521,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "Entra\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "(559, 4)\n",
-      "(4, 1)\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "(559, 1)\n",
-      "(1, 1)\n",
-      "Y SHAPE\n",
-      "(559,)\n",
-      "1\n",
-      "Entra\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "(556, 4)\n",
-      "(4, 1)\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "(556, 1)\n",
-      "(1, 1)\n",
-      "Y SHAPE\n",
-      "(556,)\n",
-      "1\n",
-      "Entra\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "(556, 4)\n",
-      "(4, 1)\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "(556, 1)\n",
-      "(1, 1)\n",
-      "Y SHAPE\n",
-      "(556,)\n",
-      "1\n",
-      "Entra\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "(559, 4)\n",
-      "(4, 2)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (559,2) (2,1) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-190-668a3ccc8fb7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     41\u001b[0m                 \u001b[0mweigths\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbias\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgenerator_W_b\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mact_layers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m                 \u001b[0mweigths_r\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbias_r\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcost_history_r\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGradiente_Descendiente\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_fold_X\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_fold_y\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweigths\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbias\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtasa\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m                 \u001b[0macc_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCalcular_Accuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_fold_X\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtest_fold_y\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweigths_r\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbias_r\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m                 \u001b[0macc_test_total\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0macc_test\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-174-12de6296bcdf>\u001b[0m in \u001b[0;36mCalcular_Accuracy\u001b[1;34m(X, y, W_dict, b_dict)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mCalcular_Accuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mA_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mForward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW_dict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mA_L\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mA_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"A%d\"\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA_dict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mA_L\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlogical_xor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlogical_not\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-157-e64b14dce7c4>\u001b[0m in \u001b[0;36mForward\u001b[1;34m(X, W, b)\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mA_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m\"A0\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mA\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mZ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mActivation\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mA\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m[\u001b[0m \u001b[1;34m\"W%d\"\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m[\u001b[0m \u001b[1;34m\"b%d\"\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m]\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m         \u001b[0mZ_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Z%d\"\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mZ\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mA_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"A%d\"\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mA\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-189-86201a36db90>\u001b[0m in \u001b[0;36mActivation\u001b[1;34m(X, W, b)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mZ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[1;31m#Z = np.mat(X) * np.mat(W)+ b\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mA\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSigmoidal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mZ\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (559,2) (2,1) "
+      "[4, 1, 1]\n",
+      "[4, 1, 1]\n",
+      "[4, 1, 1]\n",
+      "[4, 2, 1]\n",
+      "[4, 2, 1]\n",
+      "[4, 2, 1]\n",
+      "[4, 3, 1]\n",
+      "[4, 3, 1]\n",
+      "[4, 3, 1]\n",
+      "[4, 4, 1]\n",
+      "[4, 4, 1]\n",
+      "[4, 4, 1]\n"
      ]
     }
    ],
@@ -604,10 +562,7 @@
     "        for t in range(len(tasas)):\n",
     "            acc_test_total = 0.0\n",
     "            tasa = tasas[t]\n",
-    "            print(len(iteraciones))\n",
     "            for j,it in enumerate(iteraciones):\n",
-    "                print(\"Entra\")\n",
-    "               \n",
     "            \n",
     "                #actual fold (usado para test)\n",
     "                fold = titanic_folds[i]\n",
@@ -626,40 +581,41 @@
     "                act_layers.append(len(lay))\n",
     "                act_layers.append(1)\n",
     "\n",
+    "                print(act_layers)\n",
     "                weigths, bias = generator_W_b(act_layers)\n",
     "                weigths_r, bias_r, cost_history_r = Gradiente_Descendiente(train_fold_X, train_fold_y, weigths, bias, j, tasa)\n",
-    "                acc_test = Calcular_Accuracy(test_fold_X,test_fold_y, weigths_r, bias_r)\n",
-    "                acc_test_total += acc_test\n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "                '''\n",
-    "                weigths = weights_generator(act_layers)\n",
-    "                activations = Generar_Activaciones(act_layers)\n",
-    "                print(train_fold_y)\n",
-    "                weights_r, cost_history_r = Gradiente_Descendiente(train_fold_X, train_fold_y, weigths, it, t, activations)\n",
     "               \n",
-    "                matrix_ac[t,j,i] = Calcular_Accuracy(test_fold_X,test_fold_y,new_Weigths,activations)\n",
-    "                \n",
-    "                \n",
-    "                print(len(cost_history_r))\n",
-    "                costo_gradiente = cost_history_r[-1]\n",
-    "                \n",
-    "                results_titanic[\"tasa_\"+str(tasa)+\"_iter_\"+str(iteracion)+\"_fold_\"+str(i)] = costo_gradiente\n",
-    "                weights_titanic[\"tasa_\"+str(tasa)+\"_iter_\"+str(iteracion)+\"_fold_\"+str(i)] = weights_r\n",
-    "                '''"
+    "                weights_titanic[\"tasa_\"+str(tasa)+\"_iter_\"+str(j)+\"_fold_\"+str(i)] = weigths_r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
+      "{'tasa_0.01_iter_0_fold_0': {'W1': array([[0.97172868, 0.54734709, 0.36257306, 0.58269626],\n",
+      "       [0.0918105 , 0.93377981, 0.59329302, 0.43847196],\n",
+      "       [0.02429378, 0.86429784, 0.34551517, 0.93146838],\n",
+      "       [0.89571567, 0.79813067, 0.44584417, 0.71504864]]), 'W2': array([[0.26571474],\n",
+      "       [0.03398014],\n",
+      "       [0.55402186],\n",
+      "       [0.71265234]])}, 'tasa_0.01_iter_0_fold_1': {'W1': array([[0.44039744, 0.87408511, 0.16684202, 0.98179155],\n",
+      "       [0.2384461 , 0.84595585, 0.25085979, 0.43654171],\n",
+      "       [0.56176166, 0.10971305, 0.95349885, 0.4936567 ],\n",
+      "       [0.64133863, 0.61384661, 0.23797339, 0.43773421]]), 'W2': array([[0.8989788 ],\n",
+      "       [0.18239234],\n",
+      "       [0.42859011],\n",
+      "       [0.07301426]])}, 'tasa_0.01_iter_0_fold_2': {'W1': array([[0.30957795, 0.71258094, 0.35182892, 0.34010954],\n",
+      "       [0.47582245, 0.49753117, 0.5978144 , 0.66995965],\n",
+      "       [0.2111685 , 0.5957909 , 0.11253155, 0.56579316],\n",
+      "       [0.08688627, 0.09362349, 0.42271668, 0.40164684]]), 'W2': array([[0.08518406],\n",
+      "       [0.65689429],\n",
+      "       [0.80318701],\n",
+      "       [0.98056858]])}}\n"
      ]
     }
    ],
@@ -773,6 +729,13 @@
     "score = kernel_gausiano_SVM(X_train, y_train, X_test, y_test)\n",
     "print (\"Score de kernel gausiano SVM:\\n\", score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
