--- a/Trabajo Final/Análisis de Sentimientos-Copy1.ipynb
+++ b/Trabajo Final/Análisis de Sentimientos-Copy1.ipynb
@@ -89,39 +89,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DATASET\n",
-    "TRAIN_SIZE = 0.8\n",
-    "\n",
-    "# WORD2VEC \n",
-    "W2V_SIZE = 300\n",
-    "W2V_WINDOW = 7\n",
-    "W2V_EPOCH = 32\n",
-    "W2V_MIN_COUNT = 10\n",
-    "\n",
-    "# KERAS\n",
-    "SEQUENCE_LENGTH = 300\n",
-    "EPOCHS = 5\n",
-    "BATCH_SIZE = 1024\n",
-    "\n",
-    "# SENTIMENT\n",
-    "POSITIVE = \"POSITIVE\"\n",
-    "NEGATIVE = \"NEGATIVE\"\n",
-    "NEUTRAL = \"NEUTRAL\"\n",
-    "SENTIMENT_THRESHOLDS = (0.4, 0.7)\n",
-    "\n",
-    "# EXPORT\n",
-    "KERAS_MODEL = \"model.h5\"\n",
-    "WORD2VEC_MODEL = \"model.w2v\"\n",
-    "TOKENIZER_MODEL = \"tokenizer.pkl\"\n",
-    "ENCODER_MODEL = \"encoder.pkl\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -475,6 +442,7 @@
     }
    ],
    "source": [
+    "TRAIN_SIZE = 0.8\n",
     "df_train, df_test = train_test_split(data, test_size=1-TRAIN_SIZE, random_state=42)\n",
     "print(\"TRAIN size:\", len(df_train))\n",
     "print(\"TEST size:\", len(df_test))"
@@ -507,10 +475,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "W2V_SIZE = 300\n",
+    "W2V_WINDOW = 7\n",
+    "W2V_EPOCH = 32\n",
+    "W2V_MIN_COUNT = 10\n",
+    "\n",
     "w2v_model = gensim.models.word2vec.Word2Vec(size=W2V_SIZE, \n",
     "                                            window=W2V_WINDOW, \n",
     "                                            min_count=W2V_MIN_COUNT, \n",
@@ -1323,28 +1296,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['POSITIVE', 'NEGATIVE', 'NEUTRAL']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labels = df_train.target.unique().tolist()\n",
-    "labels.append(NEUTRAL)\n",
-    "labels"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -1588,6 +1539,10 @@
     }
    ],
    "source": [
+    "SEQUENCE_LENGTH = 300\n",
+    "EPOCHS = 5\n",
+    "BATCH_SIZE = 1024\n",
+    "\n",
     "%%time\n",
     "history = model.fit(x_train, y_train,\n",
     "                    batch_size=BATCH_SIZE,\n",
@@ -1695,6 +1650,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "POSITIVE = \"POSITIVE\"\n",
+    "NEGATIVE = \"NEGATIVE\"\n",
+    "NEUTRAL = \"NEUTRAL\"\n",
+    "SENTIMENT_THRESHOLDS = (0.4, 0.7)\n",
+    "\n",
     "def decode_sentiment(score, include_neutral=True):\n",
     "    if include_neutral:        \n",
     "        label = NEUTRAL\n",
@@ -1952,10 +1912,10 @@
     }
    ],
    "source": [
-    "model.save(KERAS_MODEL)\n",
-    "w2v_model.save(WORD2VEC_MODEL)\n",
-    "pickle.dump(tokenizer, open(TOKENIZER_MODEL, \"wb\"), protocol=0)\n",
-    "pickle.dump(encoder, open(ENCODER_MODEL, \"wb\"), protocol=0)"
+    "model.save(\"model.h5\")\n",
+    "w2v_model.save(\"model.w2v\")\n",
+    "pickle.dump(tokenizer, open(\"tokenizer.pkl\", \"wb\"), protocol=0)\n",
+    "pickle.dump(encoder, open(\"encoder.pkl\", \"wb\"), protocol=0)"
    ]
   }
  ],
